--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -195,7 +195,13 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration"
+    "test:integration": "jest tests/integration",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "lint:ci": "eslint \"src/**/*.{ts,tsx}\" --max-warnings=0",
+    "typecheck": "tsc -p ./ --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
@@ -205,7 +211,15 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.4.1",
     "typescript": "^4.9.4",
-    "vscode-test": "^1.6.1"
+    "vscode-test": "^1.6.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "^48.7.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "prettier": "^3.2.5"
   },
   "dependencies": {
     "axios": "^1.6.0"
