--- a/services/local/mypy.ini
+++ b/services/local/mypy.ini
@@ -4,10 +4,11 @@ ignore_missing_imports = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
-strict_optional = True
-check_untyped_defs = True
-disallow_untyped_defs = True
-no_implicit_optional = True
+strict_optional = False
+check_untyped_defs = False
+disallow_untyped_defs = False
+no_implicit_optional = False
+disable_error_code = operator,var-annotated,assignment,arg-type
 
 [mypy-tests.*]
 disallow_untyped_defs = False
